...
            .fillMaxWidth()
    ) {
        Text(text = spiceName)
        RadioButton(
            selected = isSelected,
            onClick = onSelect,
            modifier = Modifier.testTag("radioTag")
        )
    }
}

@Preview(showBackground = true)
@Composable
...
        Text(text = sideName)
        Checkbox(
            checked = isChecked,
            onCheckedChange = {
                onChecked(it)
            },
            modifier = Modifier.testTag("checkboxTag")
        )
    }
}

@Preview(showBackground = true)
@Composable
...
